@@ -814,11 +814,8 @@ _g_utf8_normalize_wc (const gchar * str, gssize max_len, GNormalizeMode mode)
     }
 
   if (n_wc > 0)
-    {
-      g_unicode_canonical_ordering (wc_buffer + last_start,
-				    n_wc - last_start);
-      last_start = n_wc;
-    }
+    g_unicode_canonical_ordering (wc_buffer + last_start,
+				  n_wc - last_start);
 
   wc_buffer[n_wc] = 0;
 
